<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="welcome">Tic-Tac-Toe</string>
    <string name="grid">our main grid</string>
    <string name="status">X\'s Turn</string>
    <string name="position">Ranking</string>
    <string name="lead_team">Team</string>
    <string name="points">Score</string>
    <string name="rank1">1</string>
    <string name="rank2">2</string>
    <string name="tied">Match Drawn</string>
    <string name="results">Results</string>
    <string name="reset">Reset</string>
</resources>