<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">
    <TextView
        android:id="@+id/pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:text="@string/position"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBaseline_toBaselineOf="@+id/team"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/lead_team"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toStartOf="@+id/score"
        app:layout_constraintStart_toEndOf="@+id/pos"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/points"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBaseline_toBaselineOf="@+id/team"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/pos1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/rank1"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/pos"
        app:layout_constraintStart_toStartOf="@+id/pos"
        app:layout_constraintTop_toBottomOf="@+id/pos" />

    <TextView
        android:id="@+id/pos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/rank2"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/pos"
        app:layout_constraintStart_toStartOf="@+id/pos"
        app:layout_constraintTop_toBottomOf="@+id/pos1" />

    <TextView
        android:id="@+id/x_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/team"
        app:layout_constraintStart_toStartOf="@+id/team"
        app:layout_constraintTop_toBottomOf="@+id/team" />

    <TextView
        android:id="@+id/o_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/team"
        app:layout_constraintStart_toStartOf="@+id/team"
        app:layout_constraintTop_toBottomOf="@+id/x_team" />

    <TextView
        android:id="@+id/score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/score"
        app:layout_constraintStart_toStartOf="@+id/score"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/score"
        app:layout_constraintStart_toStartOf="@+id/score"
        app:layout_constraintTop_toBottomOf="@+id/score1" />

    <TextView
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/tied"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="@+id/score"
        app:layout_constraintStart_toStartOf="@+id/pos"
        app:layout_constraintTop_toBottomOf="@+id/pos2" />

    <TextView
        android:id="@+id/draw_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBaseline_toBaselineOf="@+id/draw"
        app:layout_constraintEnd_toEndOf="@+id/score" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="resetResults"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/team"
        app:layout_constraintStart_toStartOf="@+id/team"
        app:layout_constraintTop_toBottomOf="@+id/draw" />

</androidx.constraintlayout.widget.ConstraintLayout>